--- a/public/index.html
+++ b/public/index.html
@@ -81,10 +81,12 @@
     </span>
     <div class="lg:hidden pt-16">
         <a class="inline-block text-tiny leading-loose px-6 rounded-lg border-white border cursor-pointer transition-transform duration-100 transform scale-100 hover:scale-105">
-    <svg class="fill-current h-4 w-4 inline" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
-        <path d="M5.906 0h2.188c.182 0 .337.064.465.191a.633.633 0 01.191.465V5.25h2.406c.237 0 .401.114.492.342.092.228.055.424-.109.588l-4.156 4.156a.525.525 0 01-.766 0L2.461 6.18c-.164-.164-.2-.36-.11-.588.092-.228.256-.342.493-.342H5.25V.656c0-.182.064-.337.191-.465A.633.633 0 015.906 0zM14 10.281v3.063a.633.633 0 01-.191.465.633.633 0 01-.465.191H.656a.633.633 0 01-.465-.191.633.633 0 01-.191-.465V10.28c0-.182.064-.337.191-.465a.633.633 0 01.465-.191h4.02l1.34 1.34c.273.273.601.41.984.41s.71-.137.984-.41l1.34-1.34h4.02c.182 0 .337.064.465.191a.633.633 0 01.191.465zm-3.555 2.79a.525.525 0 000-.766.525.525 0 00-.765 0 .525.525 0 000 .765.525.525 0 00.765 0zm1.75 0a.525.525 0 000-.766.525.525 0 00-.765 0 .525.525 0 000 .765.525.525 0 00.765 0z" fill="#FFF" fill-rule="evenodd"></path>
+
+    <svg class="fill-current h-4 w-4 inline" xmlns="http://www.w3.org/2000/svg" viewBox="-2 -2 24 24" width="24" height="24" preserveAspectRatio="xMinYMin">
+        <path d="M2.328 6.868l7.017 6.253a1 1 0 0 0 1.33 0l7.009-6.246-7.137-4.665a1 1 0 0 0-1.094 0L2.328 6.868zM18 7.082v2.19l-5.994 5.342a3 3 0 0 1-3.992 0L2 9.254V7.083 18h16V7.082zM.906 5.408L8.359.536a3 3 0 0 1 3.282 0l7.453 4.872A2 2 0 0 1 20 7.082V18a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V7.082a2 2 0 0 1 .906-1.674z">
+        </path>
     </svg>
-    Corona Whitepaper
+    Corona News
 </a>
     </div>
 </section>
@@ -200,27 +202,24 @@
         sehen: Das erleichtert auch Deine Steuererklärung als NGO.
     </p>
 </section>
-            <section class="snap-container">
-    <h2 class="text-3xl lg:text-5xl leading-tight font-hairline pb-8">
-        Jetzt schon <b class="font-bold">neugierig</b>?
-    </h2>
-    <p class="max-w-lg ml-auto">
-        Dann erfahre als einer der ersten alle Details über gettup und melde Dich für
-        unseren Newsletter an. <br>
-        Einfach E-Mail-Adresse eintragen und schon geht´s los. Als Dankeschön versorgen wir Dich ab sofort und
-        regelmäßig mit hilfreichen Infos zu den geplanten Corona Staatshilfen für gemeinnützige Organisationen.
-    </p>
-</section>
+            
             <section class="snap-container">
     <div class="max-w-xl lg:mt-0 mx-auto rounded-lg overflow-hidden shadow-lg bg-white">
         <div class="p-8 lg:p-12 text-center">
             <div class="font-bold text-xl lg:text-2xl mb-8 text-blue-500 text-center">
-                <svg viewBox="0 0 384 512" class="fill-current w-4 h-4 mx-auto my-2">
-                    <path d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm64 236c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12v8zm0-64c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12v8zm0-72v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm96-114.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z">
+
+                <svg class="fill-current w-4 h-4 mx-auto my-2" xmlns="http://www.w3.org/2000/svg" viewBox="-4 -2 24 24" width="24" height="24" preserveAspectRatio="xMinYMin">
+                    <path d="M3 0h10a3 3 0 0 1 3 3v14a3 3 0 0 1-3 3H3a3 3 0 0 1-3-3V3a3 3 0 0 1 3-3zm1 7a1 1 0 1 0 0 2h8a1 1 0 0 0 0-2H4zm0 8a1 1 0 0 0 0 2h5a1 1 0 0 0 0-2H4zM4 3a1 1 0 1 0 0 2h8a1 1 0 0 0 0-2H4zm0 8a1 1 0 0 0 0 2h8a1 1 0 0 0 0-2H4z">
                     </path>
                 </svg>
-                Hol dir das Corona Whitepaper
+                Jetzt schon <b class="font-bold">neugierig</b>?
             </div>
+            <p class="max-w-lg ml-auto text-blue-500">
+                Dann erfahre als einer der ersten alle Details über gettup und melde Dich für
+                unseren Newsletter an. <br>
+                Einfach E-Mail-Adresse eintragen und schon geht´s los. Als Dankeschön versorgen wir Dich ab sofort und
+                regelmäßig mit hilfreichen Infos zu den geplanten Corona Staatshilfen für gemeinnützige Organisationen.
+            </p>
             <iframe class="mj-w-res-iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://app.mailjet.com/widget/iframe/5n6j/Ecq" width="100%"></iframe>
 
             <script type="text/javascript" src="https://app.mailjet.com/statics/js/iframeResizer.min.js"></script>
@@ -252,10 +251,12 @@
         <div class="hidden lg:block fixed bottom-0 w-full">
             <div class="container mx-auto pb-12 px-8 flex justify-between">
                 <a class="inline-block text-tiny leading-loose px-6 rounded-lg border-white border cursor-pointer transition-transform duration-100 transform scale-100 hover:scale-105">
-    <svg class="fill-current h-4 w-4 inline" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
-        <path d="M5.906 0h2.188c.182 0 .337.064.465.191a.633.633 0 01.191.465V5.25h2.406c.237 0 .401.114.492.342.092.228.055.424-.109.588l-4.156 4.156a.525.525 0 01-.766 0L2.461 6.18c-.164-.164-.2-.36-.11-.588.092-.228.256-.342.493-.342H5.25V.656c0-.182.064-.337.191-.465A.633.633 0 015.906 0zM14 10.281v3.063a.633.633 0 01-.191.465.633.633 0 01-.465.191H.656a.633.633 0 01-.465-.191.633.633 0 01-.191-.465V10.28c0-.182.064-.337.191-.465a.633.633 0 01.465-.191h4.02l1.34 1.34c.273.273.601.41.984.41s.71-.137.984-.41l1.34-1.34h4.02c.182 0 .337.064.465.191a.633.633 0 01.191.465zm-3.555 2.79a.525.525 0 000-.766.525.525 0 00-.765 0 .525.525 0 000 .765.525.525 0 00.765 0zm1.75 0a.525.525 0 000-.766.525.525 0 00-.765 0 .525.525 0 000 .765.525.525 0 00.765 0z" fill="#FFF" fill-rule="evenodd"></path>
+
+    <svg class="fill-current h-4 w-4 inline" xmlns="http://www.w3.org/2000/svg" viewBox="-2 -2 24 24" width="24" height="24" preserveAspectRatio="xMinYMin">
+        <path d="M2.328 6.868l7.017 6.253a1 1 0 0 0 1.33 0l7.009-6.246-7.137-4.665a1 1 0 0 0-1.094 0L2.328 6.868zM18 7.082v2.19l-5.994 5.342a3 3 0 0 1-3.992 0L2 9.254V7.083 18h16V7.082zM.906 5.408L8.359.536a3 3 0 0 1 3.282 0l7.453 4.872A2 2 0 0 1 20 7.082V18a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V7.082a2 2 0 0 1 .906-1.674z">
+        </path>
     </svg>
-    Corona Whitepaper
+    Corona News
 </a>
                 <div>
                     <button class="" id="scroll-down">
