--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
             <include src="04.1_was-spricht-für-uns.html"></include>
             <include src="04.2_warum-gibt-es-gettup.html"></include>
             <include src="05.1_was-bieten-wir.html"></include>
-            <include src="05.2_neugierig.html"></include>
+            <!-- <include src="05.2_neugierig.html"></include> -->
             <include src="06_form.html"></include>
         </div>
     </block>
