--- a/src/datenschutz.html
+++ b/src/datenschutz.html
@@ -9,7 +9,7 @@
                     <li>
                         <h3>Allgemeines</h3>
                         <p>
-                            Die Medienland GmbH &amp; Co. KG, Einsteinstraße 1, 24118 Kiel, Deutschland ist
+                            Die gettup GmbH &amp; Co. KG, Einsteinstraße 1, 24118 Kiel, Deutschland ist
                             Verantwortliche im Sinne der
                             Europäischen Datenschutzgrundverordnung (DSGVO) für die Datenverarbeitung auf dieser
                             Website. Wir achten
@@ -654,7 +654,7 @@
                         <h3>Datenschutzbeauftragter</h3>
                         <p>
                             Sofern Sie Fragen im Bezug zur Verarbeitung Ihrer personenbezogenen Daten haben, sprechen
-                            Sie uns gern an oder schreiben Sie uns eine E-Mail unter: info@medienland.com
+                            Sie uns gern an oder schreiben Sie uns eine E-Mail unter: info@gettup.de
                         </p>
                     </li>
                     <li>
