--- a/src/impressum.html
+++ b/src/impressum.html
@@ -6,24 +6,24 @@
                     Impressum
                 </h1>
                 <p class="pb-8">
-                    Medienland GmbH & Co. KG<br>
-                    Einsteinstraße 1, 24118 Kiel<br>
-                    info@medienland.com
+                    gettup GmbH & Co. KG<br>
+                    Einsteinstraße 1, 24118 Kiel
                 </p>
-
+                <p class="pb-8">
+                    Telefon: +49 (0)431 22139660<br>
+                    E-Mail: info@gettup.de<br>
+                    Internet: www.gettup.de</p>
                 <p class="pb-8">
                     Registergericht: Amtsgericht Kiel, HRA 10604 KI<br>
-                    Geschäftsführer: Marcus Rost
-                </p>
-
+                    Persönlich haftende Gesellschafterin: gettup Management GmbH<br>
+                    Registergericht: Amtsgericht Kiel, HRB 13977 KI<br>
+                    Geschäftsführer: Marcus Rost, Roland Weinzierl</p>
                 <p class="pb-8">
                     USt.-ID: DE328074802
                 </p>
-
                 <p class="pb-8">
                     Inhaltlich verantwortlich gemäß § 55 Abs. 2 RStV: Marcus Rost
                 </p>
-
             </section>
         </div>
 
