--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,10 @@
             <include src="01_home.html"></include>
             <include src="02_ihr.html"></include>
             <include src="03_wir.html"></include>
-            <include src="04.1_was-spricht-für-uns.html"></include>
-            <include src="04.2_warum-gibt-es-gettup.html"></include>
-            <include src="05.1_was-bieten-wir.html"></include>
-            <!-- <include src="05.2_neugierig.html"></include> -->
-            <include src="06_form.html"></include>
+            <include src="04_was-spricht-für-uns.html"></include>
+            <include src="05_worum-gehts-konkret.html"></include>
+            <include src="06_warum-gibt-es-gettup.html"></include>
+            <include src="07_form.html"></include>
         </div>
     </block>
 
