--- a/public/datenschutz.html
+++ b/public/datenschutz.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Gettup</title>
 
-    <link rel="stylesheet" href="./assets/css/app.css">
-    <script src="./assets/js/app.js"></script>
+    <link rel="stylesheet" href="./home/assets/css/app.css">
+    <script src="./home/assets/js/app.js"></script>
     <script>
         (function (w, d, s, l, i) {
             w[l] = w[l] || [];
