--- a/public/index.html
+++ b/public/index.html
@@ -112,10 +112,10 @@
 </section>
 <section class="snap-container">
     <h2 class="text-3xl lg:text-5xl leading-tight font-hairline pb-8">
-        Endlich wird´s einfach – mit <b class="font-bold">gettup</b>!.
+        Endlich wird´s einfach – mit <b class="font-bold">gettup</b>!
     </h2>
     <p class="max-w-lg ml-auto">
-        Von Spenden-Orga bis Kontaktpflege: NGOs haben in der Verwaltung allerhand zu tun. Bald gibt´s aber konkrete Hilfe: „gettup“ kommt! Wir halten Dir den Rücken frei, damit Du Dich voll und ganz für das engagieren kannst, was Dir am Herzen liegt.
+        Von Spenden-Orga bis Kontaktpflege: NGOs haben in der Verwaltung allerhand zu tun. Bald gibt´s aber konkrete Hilfe: „gettup“ kommt! Wir halten Euch den Rücken frei, damit Ihr Euch voll und ganz für das engagieren könnt, was Euch am Herzen liegt.
     </p>
 </section>
 <section class="snap-container">
@@ -126,23 +126,23 @@
         <ul class="pl-12">
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir machen Dich zukunftsfit.</b> Du bekommst ein digitales Zuhause für Deine Verwaltung und bleibst immer up to date. Klingt gut, oder?!</p>
+                <p><b>Wir machen Euch zukunftsfit.</b> Ihr bekommt ein digitales Zuhause für Eure Verwaltung und bleibt immer up to date. Klingt gut, oder?!</p>
             </li>
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir sorgen für mehr Zeit.</b> Keine lästige Administration mehr: Mit uns kannst Du Dein Augenmerk endlich wieder auf Kernaufgaben richten.</p>
+                <p><b>Wir sorgen für mehr Zeit.</b> Keine lästige Administration mehr: Mit uns könnt Ihr Euer Augenmerk endlich wieder auf Kernaufgaben richten.</p>
             </li>
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir setzen auf Einfachheit.</b> Du wirst sehen: Unser Portal ist intuitiv aufgebaut und völlig easy in der Handhabung.</p>
+                <p><b>Wir setzen auf Einfachheit.</b> Ihr werdet sehen: Unser Portal ist intuitiv aufgebaut und völlig easy in der Handhabung.</p>
             </li>
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir bieten Dir Mobilität.</b> Deine Verwaltung hast Du künftig an jedem Ort der Welt dabei – das ist heute einfach ein Muss.</p>
+                <p><b>Wir bieten Euch Mobilität.</b> Eure Verwaltung habt Ihr künftig an jedem Ort der Welt dabei – das ist heute einfach ein Muss.</p>
             </li>
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir bieten Dir Sicherheit.</b> Gesetzliche Regeln zu Datenschutz und Co. ändern sich schnell. Aber bei uns bist Du immer auf der sicheren Seite.
+                <p><b>Wir bieten Euch Sicherheit.</b> Gesetzliche Regeln zu Datenschutz und Co. ändern sich schnell. Aber bei uns seid Ihr immer auf der sicheren Seite.
             </li>
         </ul>
     </div>
@@ -152,7 +152,7 @@
         Worum geht´s <b class="font-bold">konkret</b>?
     </h2>
     <p class="max-w-lg ml-auto">
-        Kurz gesagt: Wir helfen Dir bei dem, was Zeit und Nerven kostet. Deine gesamte Einnahmen- und Ausgaben-Orga ist bei uns einfach nur noch einfach. Übersichtlich. Auf Knopfdruck verfügbar. Da wird die Steuererklärung zum Kinderspiel. Auch beim wichtigen Thema „Kontakte“ helfen wir Dir natürlich. All das kannst Du auf unserem Portal ganz einfach organisieren. Klar, dass wir dabei immer auf höchste Sicherheitsstandards setzen. Und wir wissen auch: Nichts ist für NGOs wichtiger als Präsenz! Deshalb kannst Du bei uns auch Profil- und Projektseiten anlegen, auf denen Du Deine Botschaften und Spendenkanäle präsentieren und in sozialen Netzwerken teilen kannst.
+        Kurz gesagt: Wir helfen Euch bei dem, was Zeit und Nerven kostet. Eure gesamte Einnahmen- und Ausgaben-Orga ist bei uns einfach nur noch einfach. Übersichtlich. Auf Knopfdruck verfügbar. Da wird die Steuererklärung zum Kinderspiel. Auch beim wichtigen Thema „Kontakte“ helfen wir Euch natürlich. All das könnt Ihr auf unserem Portal ganz einfach organisieren. Klar, dass wir dabei immer auf höchste Sicherheitsstandards setzen. Und wir wissen auch: Nichts ist für NGOs wichtiger als Präsenz! Deshalb könnt Ihr bei uns auch Profil- und Projektseiten anlegen, auf denen Ihr Eure Botschaften und Spendenkanäle präsentieren und in sozialen Netzwerken teilen könnt.
     </p>
 </section>
 <section class="snap-container">
@@ -160,7 +160,7 @@
         Warum gibt es <b class="font-bold">gettup</b>?
     </h2>
     <p class="max-w-lg ml-auto">
-        Wir finden: Alle Menschen, die in NGOs leidenschaftlich für ihre Sache kämpfen, haben im Zuge der Digitalisierung die beste Unterstützung verdient. Ihr handelt aus tiefster Überzeugung, ihr brennt für Euer Thema – und mit genau diesem Engagement wollen wir nun Euch unterstützen. Digitale Verwaltung soll für Euch kein Problem mehr sein, sondern einfach und schnell erledigt. gettup ist startklar. Ihr auch?
+        Wir finden: Alle Menschen, die in NGOs leidenschaftlich für ihre Sache kämpfen, haben im Zuge der Digitalisierung die beste Unterstützung verdient. Ihr handelt aus tiefster Überzeugung, Ihr brennt für Euer Thema – und mit genau diesem Engagement wollen auch wir Euch unterstützen. Digitale Verwaltung soll für Euch keine Hürde sein, sondern einfach und schnell erledigt. gettup ist startklar. Ihr auch?
     </p>
 </section>
 <section class="snap-container">
