--- a/public/index.html
+++ b/public/index.html
@@ -95,9 +95,6 @@
         <ul class="ms-slider__words">
             <li class="ms-slider__word"><b class="font-bold">Weltverbesserer</b>innen</li>
             <li class="ms-slider__word"><b class="font-bold">Ideenwahrwerdenlasser</b>innen</li>
-            <li class="ms-slider__word"><b class="font-bold">Möglichmacher</b>innen</li>
-            <li class="ms-slider__word"><b class="font-bold">Hoffnungsschenker</b>innen</li>
-            <li class="ms-slider__word"><b class="font-bold">Perspektivenzeiger</b>innen</li>
             <li class="ms-slider__word"><b class="font-bold">Zukunftsgestalter</b>innen</li>
             <!-- This last word needs to duplicate the first one to ensure a smooth infinite animation -->
             <li class="ms-slider__word"><b class="font-bold">Weltverbesserer</b>innen</li>
@@ -112,10 +109,18 @@
 </section>
 <section class="snap-container">
     <h2 class="text-3xl lg:text-5xl leading-tight font-hairline pb-8">
-        Endlich wird´s einfach – mit <b class="font-bold">gettup</b>!
+        Jetzt kommt <b class="font-bold">gettup</b>. Für Euch.
     </h2>
     <p class="max-w-lg ml-auto">
-        Von Spenden-Orga bis Kontaktpflege: NGOs haben in der Verwaltung allerhand zu tun. Bald gibt´s aber konkrete Hilfe: „gettup“ kommt! Wir halten Euch den Rücken frei, damit Ihr Euch voll und ganz für das engagieren könnt, was Euch am Herzen liegt.
+        Von Mitgliederverwaltung bis Buchhaltung: Als NGO habt Ihr in der Administration allerhand zu tun. Mit den digitalen Tools von gettup bekommt Ihr Eure Verwaltungsarbeit schneller und einfacher erledigt. So könnt Ihr Euch auf das Wichtigste konzentrieren: Das Thema, das Euch am Herzen liegt.
+    </p>
+</section>
+<section class="snap-container">
+    <h2 class="text-3xl lg:text-5xl leading-tight font-hairline pb-8">
+        Worum geht´s <b class="font-bold">konkret</b>?
+    </h2>
+    <p class="max-w-lg ml-auto">
+        Kurz gesagt: Wir helfen Euch bei dem, was Zeit und Nerven kostet. <b class="font-bold">Finanzen</b>, zum Beispiel. Mit gettup wird die nächste Steuererklärung zum Kinderspiel, denn sämtliche Einnahmen und Ausgaben sind übersichtlich und auf Knopfdruck verfügbar. Daten von <b class="font-bold">Mitgliedern und Spendern</b> intuitiv erfassen und datenschutzkonform vorhalten? Aber ja, gettup ist absolut zuverlässig, denn wir setzen kompromisslos auf die höchsten Sicherheitsstandards. Und wir wissen auch: Nichts ist für eine NGO so wichtig wie ein guter <b class="font-bold">Auftritt im Internet</b>. Deshalb bekommt Ihr bei gettup auch eine Website und könnt so, ganz ohne Programmierkenntnisse, Eure Projekte und Spendenkanäle präsentieren und in sozialen Netzwerke teilen.
     </p>
 </section>
 <section class="snap-container">
@@ -126,59 +131,32 @@
         <ul class="pl-12">
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir machen Euch zukunftsfit.</b> Ihr bekommt ein digitales Zuhause für Eure Verwaltung und bleibt immer up to date. Klingt gut, oder?!</p>
+                <p><b>Wir machen Euch bereit für die Zukunft.</b> Ihr schafft Euch bei uns ein digitales Zuhause, das wir stetig weiterentwickeln.</p>
             </li>
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir sorgen für mehr Zeit.</b> Keine lästige Administration mehr: Mit uns könnt Ihr Euer Augenmerk endlich wieder auf Kernaufgaben richten.</p>
+                <p><b>Wir schaufeln Euch Zeit frei.</b> Ihr vereinfacht mit gettup Eure Administration und könnt Euch so auf Eure Kernaufgaben konzentrieren.</p>
             </li>
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir setzen auf Einfachheit.</b> Ihr werdet sehen: Unser Portal ist intuitiv aufgebaut und völlig easy in der Handhabung.</p>
+                <p><b>Wir setzen auf Einfachheit.</b> Ihr werdet sehen: Unsere Plattform ist übersichtlich aufgebaut und lässt sich intuitiv bedienen.</p>
             </li>
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir bieten Euch Mobilität.</b> Eure Verwaltung habt Ihr künftig an jedem Ort der Welt dabei – das ist heute einfach ein Muss.</p>
+                <p><b>Wir sind da, wo Ihr seid.</b> Ob zu Hause auf dem Rechner oder von unterwegs auf dem Smartphone: Arbeitet mit uns wo Ihr wollt.</p>
             </li>
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir bieten Euch Sicherheit.</b> Gesetzliche Regeln zu Datenschutz und Co. ändern sich schnell. Aber bei uns seid Ihr immer auf der sicheren Seite.
+                <p><b>Wir bieten Euch Sicherheit.</b> Gesetzliche Regeln zu Datenschutz und Co. ändern sich schnell. Bei uns seid Ihr immer auf der sicheren Seite.</p>
             </li>
         </ul>
     </div>
-</section>
-<section class="snap-container">
-    <h2 class="text-3xl lg:text-5xl leading-tight font-hairline pb-8">
-        Worum geht´s <b class="font-bold">konkret</b>?
-    </h2>
-    <p class="max-w-lg ml-auto">
-        Kurz gesagt: Wir helfen Euch bei dem, was Zeit und Nerven kostet. Eure gesamte Einnahmen- und Ausgaben-Orga ist bei uns einfach nur noch einfach. Übersichtlich. Auf Knopfdruck verfügbar. Da wird die Steuererklärung zum Kinderspiel. Auch beim wichtigen Thema „Kontakte“ helfen wir Euch natürlich. All das könnt Ihr auf unserem Portal ganz einfach organisieren. Klar, dass wir dabei immer auf höchste Sicherheitsstandards setzen. Und wir wissen auch: Nichts ist für NGOs wichtiger als Präsenz! Deshalb könnt Ihr bei uns auch Profil- und Projektseiten anlegen, auf denen Ihr Eure Botschaften und Spendenkanäle präsentieren und in sozialen Netzwerken teilen könnt.
-    </p>
-</section>
-<section class="snap-container">
-    <h2 class="text-3xl lg:text-5xl leading-tight font-hairline pb-8">
-        Warum gibt es <b class="font-bold">gettup</b>?
-    </h2>
-    <p class="max-w-lg ml-auto">
-        Wir finden: Alle Menschen, die in NGOs leidenschaftlich für ihre Sache kämpfen, haben im Zuge der Digitalisierung die beste Unterstützung verdient. Ihr handelt aus tiefster Überzeugung, Ihr brennt für Euer Thema – und mit genau diesem Engagement wollen auch wir Euch unterstützen. Digitale Verwaltung soll für Euch keine Hürde sein, sondern einfach und schnell erledigt. gettup ist startklar. Ihr auch?
-    </p>
 </section>
 <section class="snap-container">
     <div class="max-w-xl lg:mt-0 mx-auto rounded-lg overflow-hidden shadow-lg bg-white">
         <div class="p-8 lg:p-12 text-center">
             <div class="font-bold text-xl lg:text-2xl mb-8 text-blue-500 text-center">
 
-                <svg class="fill-current w-4 h-4 mx-auto my-2"
-                     xmlns="http://www.w3.org/2000/svg"
-                     viewBox="-4 -2 24 24"
-                     width="24"
-                     height="24"
-                     preserveAspectRatio="xMinYMin"
-                     class="jam-icon jam-1">
-                    <path
-                          d="M3 0h10a3 3 0 0 1 3 3v14a3 3 0 0 1-3 3H3a3 3 0 0 1-3-3V3a3 3 0 0 1 3-3zm1 7a1 1 0 1 0 0 2h8a1 1 0 0 0 0-2H4zm0 8a1 1 0 0 0 0 2h5a1 1 0 0 0 0-2H4zM4 3a1 1 0 1 0 0 2h8a1 1 0 0 0 0-2H4zm0 8a1 1 0 0 0 0 2h8a1 1 0 0 0 0-2H4z">
-                    </path>
-                </svg>
                 Jetzt schon <b class="font-bold">neugierig</b>?
             </div>
             <p class="max-w-lg ml-auto text-blue-500">
@@ -243,7 +221,7 @@
         <path d="M2.328 6.868l7.017 6.253a1 1 0 0 0 1.33 0l7.009-6.246-7.137-4.665a1 1 0 0 0-1.094 0L2.328 6.868zM18 7.082v2.19l-5.994 5.342a3 3 0 0 1-3.992 0L2 9.254V7.083 18h16V7.082zM.906 5.408L8.359.536a3 3 0 0 1 3.282 0l7.453 4.872A2 2 0 0 1 20 7.082V18a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V7.082a2 2 0 0 1 .906-1.674z">
         </path>
     </svg>
-    Corona News
+    Corona Hilfe News
 </a>
                 <div>
                     <button class="" id="scroll-down">
