Text- und CSS-Änderungen

--- a/public/index.html
+++ b/public/index.html
@@ -74,9 +74,9 @@
         <b class="font-bold">home</b>
     </h1>
     <span class="text-xl">
-        Willkommen im digitalen Zuhause<br>
+        Willkommen bei <b class="font-bold">gettup</b>, der Software-Plattform<br>
         <b>
-            für Vereine, Organisationen und Stiftungen
+            für gemeinnützige Vereine, Organisationen und Stiftungen.
         </b>
     </span>
     <div class="lg:hidden pt-16">
@@ -104,7 +104,7 @@
         Ihr <b class="font-bold">verändert</b> alles
     </h2>
     <p class="max-w-lg ml-auto">
-        Ihr investiert Herzblut, Leidenschaft und unbezahlte Arbeitsstunden. Ihr macht es, weil euch die Sache am Herzen liegt. Weil ihr die Menschen, Tiere oder die Umwelt liebt. Wofür auch immer ihr euch engagiert, Ihr gibt euer Bestes. Und das hat die beste Unterstützung verdient.
+        Ihr investiert Herzblut, Leidenschaft und unbezahlte Arbeitsstunden. Ihr macht es, weil Euch die Sache am Herzen liegt. Weil Ihr Menschen, Tiere oder die Umwelt liebt. Wofür auch immer Ihr Euch engagiert, Ihr gebt Euer Bestes. Und das hat die beste Unterstützung verdient.
     </p>
 </section>
 <section class="snap-container">
@@ -120,7 +120,7 @@
         Worum geht´s <b class="font-bold">konkret</b>?
     </h2>
     <p class="max-w-lg ml-auto">
-        Kurz gesagt: Wir helfen Euch bei dem, was Zeit und Nerven kostet. <b class="font-bold">Finanzen</b>, zum Beispiel. Mit gettup wird die nächste Steuererklärung zum Kinderspiel, denn sämtliche Einnahmen und Ausgaben sind übersichtlich und auf Knopfdruck verfügbar. Daten von <b class="font-bold">Mitgliedern und Spendern</b> intuitiv erfassen und datenschutzkonform vorhalten? Aber ja, gettup ist absolut zuverlässig, denn wir setzen kompromisslos auf die höchsten Sicherheitsstandards. Und wir wissen auch: Nichts ist für eine NGO so wichtig wie ein guter <b class="font-bold">Auftritt im Internet</b>. Deshalb bekommt Ihr bei gettup auch eine Website und könnt so, ganz ohne Programmierkenntnisse, Eure Projekte und Spendenkanäle präsentieren und in sozialen Netzwerke teilen.
+        Kurz gesagt: Wir helfen Euch bei dem, was Zeit und Nerven kostet. <b class="font-bold">Finanzen</b>, zum Beispiel. Mit gettup wird die nächste Steuererklärung zum Kinderspiel, denn sämtliche Einnahmen und Ausgaben sind übersichtlich und auf Knopfdruck verfügbar.<br>Daten von <b class="font-bold">Mitgliedern und Spendern</b> intuitiv erfassen und datenschutzkonform vorhalten? Aber ja! gettup ist absolut zuverlässig, denn wir setzen kompromisslos auf die höchsten Sicherheitsstandards. Und wir wissen auch: Nichts ist für eine NGO so wichtig wie ein guter <b class="font-bold">Auftritt im Internet</b>. Deshalb bekommt Ihr bei gettup eine Website und könnt so, ganz ohne Programmierkenntnisse, Eure Projekte und Spendenkanäle präsentieren und in sozialen Netzwerken teilen.
     </p>
 </section>
 <section class="snap-container">
@@ -131,11 +131,7 @@
         <ul class="pl-12">
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir machen Euch bereit für die Zukunft.</b> Ihr schafft Euch bei uns ein digitales Zuhause, das wir stetig weiterentwickeln.</p>
-            </li>
-            <li class="relative">
-                <include src="arrow-right.html"></include>
-                <p><b>Wir schaufeln Euch Zeit frei.</b> Ihr vereinfacht mit gettup Eure Administration und könnt Euch so auf Eure Kernaufgaben konzentrieren.</p>
+                <p><b>Wir machen Euch fit für die Zukunft.</b> Ihr schafft Euch bei uns ein digitales Zuhause, das wir stetig weiterentwickeln.</p>
             </li>
             <li class="relative">
                 <include src="arrow-right.html"></include>
@@ -221,7 +217,7 @@
         <path d="M2.328 6.868l7.017 6.253a1 1 0 0 0 1.33 0l7.009-6.246-7.137-4.665a1 1 0 0 0-1.094 0L2.328 6.868zM18 7.082v2.19l-5.994 5.342a3 3 0 0 1-3.992 0L2 9.254V7.083 18h16V7.082zM.906 5.408L8.359.536a3 3 0 0 1 3.282 0l7.453 4.872A2 2 0 0 1 20 7.082V18a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V7.082a2 2 0 0 1 .906-1.674z">
         </path>
     </svg>
-    Corona Hilfe News
+    Corona-Hilfe News
 </a>
                 <div>
                     <button class="" id="scroll-down">
