Textergänzung und -änderung
Zusätzlicher Partial "Preis" und Textänderung bei der Newsletteranmeldjung

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
             <include src="03_wir.html"></include>
             <include src="05_worum-gehts-konkret.html"></include>
             <include src="04_was-spricht-für-uns.html"></include>
-            <include src="06_form.html"></include>
+            <include src="06_preis.html"></include>
+            <include src="07_form.html"></include>
         </div>
     </block>
 
