--- a/public/index.html
+++ b/public/index.html
@@ -149,14 +149,21 @@
     </div>
 </section>
 <section class="snap-container">
+    <h2 class="text-3xl lg:text-5xl leading-tight font-hairline pb-8">
+        Was wird <b class="font-bold">gettup</b> kosten?
+    </h2>
+    <p class="max-w-lg ml-auto">
+        Hand auf‘s Herz: Es gibt wohl kaum eine gemeinnützige Organisation, die in Geld schwimmt. Im Gegenteil, die meisten müssen jeden Cent zweimal umdrehen, bevor sie ihn ausgeben. Wir finden, die ersten Schritte in der Digitalisierung dürfen für eine kleine NGO monatlich nicht mehr kosten, als eine Pizza beim Italiener um die Ecke. Und daran halten wir uns.
+    </p>
+</section>
+<section class="snap-container">
     <div class="max-w-xl lg:mt-0 mx-auto rounded-lg overflow-hidden shadow-lg bg-white">
         <div class="p-8 lg:p-12 text-center">
             <div class="font-bold text-xl lg:text-2xl mb-8 text-blue-500 text-center">
-
-                Jetzt schon <b class="font-bold">neugierig</b>?
+                Corona-Hilfe News
             </div>
             <p class="max-w-lg ml-auto text-blue-500">
-                In unserem Newsletter geben wir einen Einblick in die gettup Plattform und informieren derzeit auch über aktuelle Tipps zu privaten und öffentlichen <b class="font-bold">Corona Hilfsangeboten</b>.
+                Unser Newsletter informiert über aktuelle <b class="font-bold">Corona Hilfsangebote</b> und gibt einen Einblick in den derzeitigen Stand der gettup Plattform.
             </p>
             <iframe class="mj-w-res-iframe"
                     frameborder="0"
