--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,11 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Gettup</title>
+    <title>gettup - Digitale Werkzeuge für gemeinnützige Organisationen</title>
 
     <link rel="stylesheet" href="./assets/css/app.css">
+    <link href="/images/favicon.png" rel="shortcut icon" type="image/x-icon">
+    <link href="/images/webclip.png" rel="apple-touch-icon">
     <script src="./assets/js/app.js"></script>
     <script>
         (function (w, d, s, l, i) {
@@ -80,14 +82,13 @@
         </b>
     </span>
     <div class="lg:hidden pt-16">
-        <a class="inline-block text-tiny leading-loose px-6 rounded-lg border-white border cursor-pointer transition-transform duration-100 transform scale-100 hover:scale-105">
-
+        <button class="scroll-bottom inline-block text-tiny leading-loose px-6 rounded-lg border-white border cursor-pointer transition-transform duration-100 transform scale-100 hover:scale-105">
     <svg class="fill-current h-4 w-4 inline" xmlns="http://www.w3.org/2000/svg" viewBox="-2 -2 24 24" width="24" height="24" preserveAspectRatio="xMinYMin">
         <path d="M2.328 6.868l7.017 6.253a1 1 0 0 0 1.33 0l7.009-6.246-7.137-4.665a1 1 0 0 0-1.094 0L2.328 6.868zM18 7.082v2.19l-5.994 5.342a3 3 0 0 1-3.992 0L2 9.254V7.083 18h16V7.082zM.906 5.408L8.359.536a3 3 0 0 1 3.282 0l7.453 4.872A2 2 0 0 1 20 7.082V18a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V7.082a2 2 0 0 1 .906-1.674z">
         </path>
     </svg>
-    Corona News
-</a>
+    Corona-Hilfe News
+</button>
     </div>
 </section>
 <section class="snap-container">
@@ -156,7 +157,7 @@
         Hand auf‘s Herz: Es gibt wohl kaum eine gemeinnützige Organisation, die in Geld schwimmt. Im Gegenteil, die meisten müssen jeden Cent zweimal umdrehen, bevor sie ihn ausgeben. Wir finden, die ersten Schritte in der Digitalisierung dürfen für eine kleine NGO monatlich nicht mehr kosten, als eine Pizza beim Italiener um die Ecke. Und daran halten wir uns.
     </p>
 </section>
-<section class="snap-container">
+<section id="news" class="snap-container">
     <div class="max-w-xl lg:mt-0 mx-auto rounded-lg overflow-hidden shadow-lg bg-white">
         <div class="p-8 lg:p-12 text-center">
             <div class="font-bold text-xl lg:text-2xl mb-8 text-blue-500 text-center">
@@ -218,14 +219,13 @@
     
         <div class="hidden lg:block fixed bottom-0 w-full">
             <div class="container mx-auto pb-12 px-8 flex justify-between">
-                <a class="inline-block text-tiny leading-loose px-6 rounded-lg border-white border cursor-pointer transition-transform duration-100 transform scale-100 hover:scale-105">
-
+                <button class="scroll-bottom inline-block text-tiny leading-loose px-6 rounded-lg border-white border cursor-pointer transition-transform duration-100 transform scale-100 hover:scale-105">
     <svg class="fill-current h-4 w-4 inline" xmlns="http://www.w3.org/2000/svg" viewBox="-2 -2 24 24" width="24" height="24" preserveAspectRatio="xMinYMin">
         <path d="M2.328 6.868l7.017 6.253a1 1 0 0 0 1.33 0l7.009-6.246-7.137-4.665a1 1 0 0 0-1.094 0L2.328 6.868zM18 7.082v2.19l-5.994 5.342a3 3 0 0 1-3.992 0L2 9.254V7.083 18h16V7.082zM.906 5.408L8.359.536a3 3 0 0 1 3.282 0l7.453 4.872A2 2 0 0 1 20 7.082V18a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V7.082a2 2 0 0 1 .906-1.674z">
         </path>
     </svg>
     Corona-Hilfe News
-</a>
+</button>
                 <div>
                     <button class="" id="scroll-down">
                         <svg class="fill-current w-4 inline" width="15" height="21" xmlns="http://www.w3.org/2000/svg">
