--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
             <div class="container mx-auto pb-12 px-8 flex justify-between">
                 <include src="whitepaper-link.html"></include>
                 <div>
-                    <button class=""
+                    <button class="next"
                             id="scroll-down">
                         <svg class="fill-current w-4 inline"
                              width="15"
