--- a/public/index.html
+++ b/public/index.html
@@ -90,6 +90,7 @@
     Corona-Hilfe News
 </button>
     </div>
+    <div class="w-10 lg:w-16"></div>
 </section>
 <section class="snap-container">
     <div class="ms-slider text-xl lg:text-2xl font-hairline">
@@ -131,19 +132,32 @@
     <div class="lg:max-w-lg lg:ml-auto">
         <ul class="pl-12">
             <li class="relative">
-                <include src="arrow-right.html"></include>
+                <svg viewBox="0 0 30 16" class="fill-current inline absolute mt-1 h-3 mr-3 -ml-12 lg:h-4 lg:mr-4" xmlns="http://www.w3.org/2000/svg">
+                    <g stroke="#FFF" fill="none" fill-rule="evenodd" stroke-linecap="round">
+                        <path d="M21.896 14.818l6.91-6.909L21.895 1M28.805 7.91H1"></path>
+                    </g>
+                </svg>
                 <p><b>Wir machen Euch fit für die Zukunft.</b> Ihr schafft Euch bei uns ein digitales Zuhause, das wir stetig weiterentwickeln.</p>
             </li>
             <li class="relative">
-                <include src="arrow-right.html"></include>
+                <svg viewBox="0 0 30 16" class="fill-current inline absolute mt-1 h-3 mr-3 -ml-12 lg:h-4 lg:mr-4" xmlns="http://www.w3.org/2000/svg">
+                    <g stroke="#FFF" fill="none" fill-rule="evenodd" stroke-linecap="round">
+                        <path d="M21.896 14.818l6.91-6.909L21.895 1M28.805 7.91H1"></path>
+                    </g>
                 <p><b>Wir setzen auf Einfachheit.</b> Ihr werdet sehen: Unsere Plattform ist übersichtlich aufgebaut und lässt sich intuitiv bedienen.</p>
             </li>
             <li class="relative">
-                <include src="arrow-right.html"></include>
+                <svg viewBox="0 0 30 16" class="fill-current inline absolute mt-1 h-3 mr-3 -ml-12 lg:h-4 lg:mr-4" xmlns="http://www.w3.org/2000/svg">
+                    <g stroke="#FFF" fill="none" fill-rule="evenodd" stroke-linecap="round">
+                        <path d="M21.896 14.818l6.91-6.909L21.895 1M28.805 7.91H1"></path>
+                    </g>
                 <p><b>Wir sind da, wo Ihr seid.</b> Ob zu Hause auf dem Rechner oder von unterwegs auf dem Smartphone: Arbeitet mit uns wo Ihr wollt.</p>
             </li>
             <li class="relative">
-                <include src="arrow-right.html"></include>
+                <svg viewBox="0 0 30 16" class="fill-current inline absolute mt-1 h-3 mr-3 -ml-12 lg:h-4 lg:mr-4" xmlns="http://www.w3.org/2000/svg">
+                    <g stroke="#FFF" fill="none" fill-rule="evenodd" stroke-linecap="round">
+                        <path d="M21.896 14.818l6.91-6.909L21.895 1M28.805 7.91H1"></path>
+                    </g>
                 <p><b>Wir bieten Euch Sicherheit.</b> Gesetzliche Regeln zu Datenschutz und Co. ändern sich schnell. Bei uns seid Ihr immer auf der sicheren Seite.</p>
             </li>
         </ul>
@@ -157,14 +171,14 @@
         Hand auf‘s Herz: Es gibt wohl kaum eine gemeinnützige Organisation, die in Geld schwimmt. Im Gegenteil, die meisten müssen jeden Cent zweimal umdrehen, bevor sie ihn ausgeben. Wir finden, die ersten Schritte in der Digitalisierung dürfen für eine kleine NGO monatlich nicht mehr kosten, als eine Pizza beim Italiener um die Ecke. Und daran halten wir uns.
     </p>
 </section>
-<section id="news" class="snap-container">
+<section class="snap-container">
     <div class="max-w-xl lg:mt-0 mx-auto rounded-lg overflow-hidden shadow-lg bg-white">
         <div class="p-8 lg:p-12 text-center">
             <div class="font-bold text-xl lg:text-2xl mb-8 text-blue-500 text-center">
                 Corona-Hilfe News
             </div>
             <p class="max-w-lg ml-auto text-blue-500">
-                Unser Newsletter informiert über aktuelle <b class="font-bold">Corona Hilfsangebote</b> und gibt einen Einblick in den derzeitigen Stand der gettup Plattform.
+                Unser Newsletter informiert über aktuelle <b>Corona Hilfsangebote</b> und gibt einen Einblick in den derzeitigen Stand der gettup Plattform.
             </p>
             <iframe class="mj-w-res-iframe"
                     frameborder="0"
@@ -172,7 +186,8 @@
                     marginheight="0"
                     marginwidth="0"
                     src="https://app.mailjet.com/widget/iframe/5n6j/Ecq"
-                    width="100%"></iframe>
+                    width="100%">
+                    </iframe>
 
             <script type="text/javascript"
                     src="https://app.mailjet.com/statics/js/iframeResizer.min.js"></script>
