--- a/public/datenschutz.html
+++ b/public/datenschutz.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Gettup</title>
 
-    <link rel="stylesheet" href="./home/assets/css/app.css">
-    <script src="./home/assets/js/app.js"></script>
+    <link rel="stylesheet" href="./assets/css/app.css">
+    <script src="./assets/js/app.js"></script>
     <script>
         (function (w, d, s, l, i) {
             w[l] = w[l] || [];
@@ -56,12 +56,14 @@
     
 
     <div class="snap-wrapper">
+
         <div class="absolute top-0 left-0 w-full h-screen pointer-events-none opacity-25 overflow-hidden">
             <svg viewBox="0 0 95 93" class="w-full h-screen opacity-25 transform scale-150 lg:scale-110" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2">
                 <circle cx="92.489" cy="91.835" r="1.291" fill="#fff" transform="translate(-562.808 -566.75) scale(6.7052)"></circle>
                 <path d="M11.948 38.48l24.387-24.386a7.005 7.005 0 000-9.9 7.005 7.005 0 00-9.9 0L2.049 28.58a7.002 7.002 0 000 9.899 7.002 7.002 0 009.899 0zM26.179 90.414l17.15-17.15a7.004 7.004 0 000-9.9 7.004 7.004 0 00-9.9 0l-17.15 17.15a7.004 7.004 0 000 9.9 7.004 7.004 0 009.9 0zM59.025 90.415L92.67 56.768a7.003 7.003 0 000-9.9 7.003 7.003 0 00-9.9 0L49.125 80.516a7.003 7.003 0 000 9.9 7.003 7.003 0 009.9 0zM15.541 67.819l55.87-55.87a7 7 0 00-9.9-9.9L5.641 57.92a7.005 7.005 0 000 9.9 7.005 7.005 0 009.9 0z" fill="#fff"></path>
             </svg>
         </div>
+
         <main class="container relative mx-auto px-8" id="content">
             
         <div class="scroller max-w-4xl mx-auto">
