--- a/public/impressum.html
+++ b/public/impressum.html
@@ -6,7 +6,11 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Gettup</title>
+    <title>Impressum | gettup</title>
+
+    <link rel="stylesheet" href="./assets/css/app.css">
+    <link href="/images/favicon.png" rel="shortcut icon" type="image/x-icon">
+    <link href="/images/webclip.png" rel="apple-touch-icon">
 
     <link rel="stylesheet" href="./assets/css/app.css">
     <script src="./assets/js/app.js"></script>
