--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>gettup - Digitale Werkzeuge für gemeinnützige Organisationen</title>
+    <meta content="Willkommen bei gettup, der Software-Plattform für gemeinnützige Vereine, Organisationen und Stiftungen." name="description">
+    <meta content="gettup - Digitale Werkzeuge für gemeinnützige Organisationen" property="og:title">
+    <meta content="Willkommen bei gettup, der Software-Plattform für gemeinnützige Vereine, Organisationen und Stiftungen." property="og:description">
+    <meta content="https://www.gettup.de/images/og-image_gettup_1200x630.png" property="og:image">
+    <meta content="gettup - Digitale Werkzeuge für gemeinnützige Organisationen" property="twitter:title">
+    <meta content="Willkommen bei gettup, der Software-Plattform für gemeinnützige Vereine, Organisationen und Stiftungen." property="twitter:description">
+    <meta content="https://www.gettup.de/images/og-image_gettup_1200x630.png" property="twitter:image">
+    <meta property="og:type" content="website">
+    <meta content="summary_large_image" name="twitter:card">
 
     <link rel="stylesheet" href="./assets/css/app.css">
     <link href="/images/favicon.png" rel="shortcut icon" type="image/x-icon">
